Add detekt default configuration

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'nebula.kotlin' version '1.2.41'
+    id "io.gitlab.arturbosch.detekt" version "1.0.0.RC7"
 }
 
 version = version ?: "development"
@@ -9,6 +10,7 @@ version = "1.0.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
