--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 version = version ?: "development"
 
 group = "com.aoe"
-version = "1.0.0-SNAPSHOT"
+version = "0.1"
 
 repositories {
     mavenCentral()
