--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,27 @@
+/*
+ * Copyright (c) 2018. Copyright (C) 2018 AOE GmbH
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 plugins {
     id 'nebula.kotlin' version '1.2.41'
     id "io.gitlab.arturbosch.detekt" version "1.0.0.RC7"
     id "org.jlleitschuh.gradle.ktlint" version "4.0.0"
     id "com.bmuschko.nexus" version "2.3.1"
 }
+
+apply plugin: 'jacoco'
 
 group = "com.aoe"
 version = "0.1"
@@ -18,6 +36,17 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'com.google.truth:truth:0.39'
+}
+
+jacoco {
+    toolVersion = "0.8.1"
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        csv.enabled false
+    }
 }
 
 modifyPom {
